# nfl_agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
docs/: model-card.md  model-evaluation.md  model-training.md
docs/superpowers/plans/: 2026-05-07-nfl-confidence-pool.md  2026-05-08-espn-data-pipeline.md  2026-05-09-espn-odds-integration.md  2026-05-10-admin-dashboard.md  2026-05-10-seasonal-model-maintenance.md
docs/superpowers/specs/: admin-dashboard-design.md
scripts/: backfill_odds.py  backfill_odds_bpi.py  backtest.py  ingest_historical.py  refresh_weekly.py  replace_bpi_odds.py  train_production.py  tune_hyperparams.py
src/api/: main.py
src/data/: espn.py  historical.py  injuries.py  odds.py  weather.py
src/db/: queries.py  schema.py
src/features/: builder.py
src/model/: evaluate.py  predict.py  train.py
src/optimizer/: confidence.py
tests/: test_admin.py  test_api.py  test_db.py  test_espn.py  test_features.py  test_model.py  test_odds.py  test_optimizer.py
ui/: admin.py  app.py  styles.py  utils.py
