[project]
name = "nfl-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "openmeteo-requests>=1.2",
    "retry-requests>=2.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "streamlit>=1.35",
    "anthropic>=0.28",
    "ollama>=0.2",
    "joblib>=1.4",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
